Use HTTPClient for PSICQUIC, try timeout of 5 secondes and use proxy